[package]
name = "axfutex"
version = "0.1.0"
edition = "2021"
authors = ["XinHao Li <3253290158@qq.com>"]
description = "A compatibility layer for futex on Starry"

[features]

fs = ["axfs"]

monolithic = ["fs" ,"axfs/monolithic", "axhal/monolithic", "axtask/monolithic"]

default = ["monolithic"]

[dependencies]
axfs = { git = "https://github.com/Starry-OS/axfs.git", optional = true }
axhal = { git = "https://github.com/Starry-OS/axhal.git" }
log = "0.4"
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
axtask = { git = "https://github.com/Starry-OS/axtask.git" }
axprocess = { git = "https://github.com/Starry-OS/axprocess.git" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
